# coding-club-platform-game

./: .flake8  AGENTS.md  CLAUDE.md  LICENSE  README.md  format.py  main.py  pyproject.toml  pytest.ini  sprite_extractor.py
.claude/: settings.local.json
game/: __init__.py  camera.py  collision_shapes.py  constants.py  display.py  game.py  input.py  level.py  mario.py  score.py  sprite_definitions.py  sprite_sheet.py  sprites.py  tile_definitions.py  world.py
game/content/: __init__.py  loader.py  palettes.py  sprite_sheet.py  sprites.py  tile_definitions.py  tiles.py  types.py
game/effects/: __init__.py  base.py  coin.py  firework.py  manager.py  score_popup.py  smash.py  sprite.py
game/entities/: __init__.py  base.py  factory.py  goomba.py  koopa.py  manager.py  mixins.py  mushroom.py
game/gameplay/: __init__.py  config.py
game/hud/: __init__.py  state.py
game/levels/: __init__.py  loader.py  parser.py  types.py
game/physics/: __init__.py  action.py  base.py  boundaries.py  ceiling_collision.py  coin_collision.py  collectable_collision.py  config.py  constants.py  death_event.py  death_physics.py  death_trigger.py  end_level_event.py  entity_collision.py  events.py  flagpole_clamp.py  gravity.py  ground_collision.py  intent.py  left_wall_collision.py  movement.py  pipeline.py  power_up.py  reset.py  right_wall_collision.py  terrain_behaviors.py  velocity.py  wall_collision.py  warp_event.py
game/props/: __init__.py  base.py  flagpole.py  manager.py
game/rendering/: __init__.py  background.py  base.py  (+14 more)
tests/: __init__.py  conftest.py  test_smoke.py
(+80 files in other folders)
